samples/_failures_safe/1761209419_cf40fd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ef32608b.c: In function ‘main’:
./samples/SAFE/__tmp_ef32608b.c:158:5: error: expected expression at end of input
  158 |     printf("Original size: %zu, Compressed size: %zu\n", input_len,
      |     ^~~~~~
./samples/SAFE/__tmp_ef32608b.c:158:5: error: expected declaration or statement at end of input
